--- a/templates/index.html
+++ b/templates/index.html
@@ -12,50 +12,111 @@
 </head>
 
 <body>
-    <div class="container">
-        <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
-            <div
-                class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-                <h1 class="h2">Dashboard</h1>
-                <div class="btn-toolbar mb-2 mb-md-0">
-                    <div class="btn-group me-2">
-                        <button type="button" class="btn btn-sm btn-outline-secondary">Share</button>
-                        <button type="button" class="btn btn-sm btn-outline-secondary">Export</button>
-                    </div>
-                    <button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle">
-                        <span data-feather="calendar" class="align-text-bottom"></span>
-                        This week
-                    </button>
+    <header class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
+        <a class="navbar-brand col-md-3 col-lg-2 me-0 px-3 fs-6" href="#">Тестовое задание</a>
+        <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-bs-toggle="collapse"
+            data-bs-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <input class="form-control form-control-dark w-100 rounded-0 border-0" type="text" placeholder="Search"
+            aria-label="Search">
+        <div class="navbar-nav">
+            <div class="nav-item text-nowrap">
+                <a class="nav-link px-3" href="#">Регистрация</a>
+            </div>
+        </div>
+    </header>
+
+    <div class="container-fluid">
+        <div class="row">
+            <nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
+                <div class="position-sticky pt-3 sidebar-sticky">
+                    <ul class="nav flex-column">
+                        <li class="nav-item">
+                            <a class="nav-link active " aria-current="page" href="/">
+                                <span data-feather="home" class="align-text-bottom"></span>
+                                Дашборд
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/zarya">
+                                <span data-feather="file" class="align-text-bottom"></span>
+                                Хозяйство "Заря"
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/progres">
+                                <span data-feather="shopping-cart" class="align-text-bottom"></span>
+                                Хозяйство "Прогресс"
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/druzhba">
+                                <span data-feather="users" class="align-text-bottom"></span>
+                                Хозяйство "Дружба"
+                            </a>
+                        </li>
+                    </ul>
                 </div>
-            </div>
+            </nav>
 
-            <canvas class="my-4 w-100" id="myChart" width="900" height="380"></canvas>
-
-            <h2>Итоговая таблица</h2>
-            <div class="table-responsive">
-                <table class="table table-striped table-sm">
-                    <thead>
-                        <tr>
-                            <th scope="col">Дата</th>
-                            <th scope="col">Техника</th>
-                            <th scope="col">Номер техники</th>
-                            <th scope="col">Площадь, га</th>
-                            <th scope="col">Объем работ, м3</th>
-                            <th scope="col">Хозяйство</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for data in datas %}
-                        <tr>
-                            {% for cell in data %}
-                            <td>{{cell}}</td>
+            <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
+                <div
+                    class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+                    <h1 class="h1">Дашборд</h1>
+                    <div class="btn-toolbar mb-2 mb-md-0">
+                        <div class="btn-group me-2">
+                            <a class="btn btn-primary large" href="/get">Скачать</a>
+                        </div>
+                    </div>
+                </div>
+                <h2 class="h2">Объем выполненных работ</h2>
+                <div class="w-75">
+                    <canvas class="my-4 w-100" id="myChart" width="900" height="380"></canvas>
+                </div>
+                <h2 class="h2">Диаграмма выполненных работ по хозяйствам</h2>
+                <div class="w-25">
+                    <canvas class="my-4 w-100" id="myPie" width="450" height="190"></canvas>
+                </div>
+                <h2 class="h2">Итоговая таблица</h2>
+                <div class="table-responsive">
+                    <table class="table table-striped table-sm">
+                        <thead>
+                            <tr>
+                                <th scope="col">Дата</th>
+                                <th scope="col">Техника</th>
+                                <th scope="col">Номер техники</th>
+                                <th scope="col">Площадь, га</th>
+                                <th scope="col">Объем работ, м3</th>
+                                <th scope="col">Хозяйство</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for data in datas %}
+                            <tr>
+                                {% for cell in data %}
+                                <td>{{cell}}</td>
+                                {% endfor %}
+                            </tr>
                             {% endfor %}
-                        </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
-            </div>
-        </main>
+                        </tbody>
+                    </table>
+                </div>
+            </main>
+        </div>
+    </div>
+    <div class="container">
+        <footer class="py-3 my-4">
+            <ul class="nav justify-content-center border-bottom pb-3 mb-3">
+                <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
+                <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Features</a></li>
+                <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Pricing</a></li>
+                <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
+                <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
+            </ul>
+            <p class="text-center text-muted">&copy; 2022 Company, Inc</p>
+        </footer>
     </div>
     <script>
         var ctx = document.getElementById("myChart").getContext("2d");
@@ -65,7 +126,7 @@
                 labels: {{ labels | safe }},
         datasets: [
             {
-                label: "Data points",
+                label: "Объем, м3",
                 data: {{ values | safe }},
             fill: false,
             borderColor: "rgb(75, 192, 192)",
@@ -76,6 +137,27 @@
         options: {
             responsive: false
         }
+        });
+        var ptx = document.getElementById("myPie").getContext("2d");
+        var config = new Chart(ptx, {
+            type: 'pie',
+            data: {
+                labels: [
+                    'Заря',
+                    'Дружба',
+                    'Прогресс'
+                ],
+                datasets: [{
+                    label: 'My First Dataset',
+                    data: [{{ zarya_volume }}, {{ druzhba_volume }}, {{ progres_volume }}],
+        backgroundColor: [
+            'rgb(255, 99, 132)',
+            'rgb(54, 162, 235)',
+            'rgb(255, 205, 86)'
+        ],
+            hoverOffset: 4
+                }]
+            },
         });
     </script>
 </body>
